# mozmoderator

./: .dockerignore  .env-dist  .gitignore  .travis.yml  Dockerfile  README.md  bower.json  buildspec.yml  contribute.json  docker-compose.yml  env-dist  gulpfile.js  heroku.Dockerfile  heroku.yml  manage.py  package.json  pyproject.toml  requirements.txt  setup.cfg  stackato.yml
.github/workflows/: build-and-push.yml  cd.yaml  ci.yaml  release.yaml  test.yaml
frontend/src/js/: app.js
frontend/src/scss/: main.scss
kubernetes/: deployment.yaml  service.yaml  values.yaml
kubernetes/prod/: configmap.yaml  deployment.yaml  ingress-controller.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
kubernetes/stage/: configmap.yaml  deployment.yaml  ingress-controller.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
kubernetes/templates/: deployment.yaml  ingress.yaml
kubernetes/values/: prod.yaml
moderator/: local_settings.py-dist  settings.py  urls.py  wsgi.py
moderator/moderate/: admin.py  apps.py  auth.py  backend.py  forms.py  helpers.py  models.py  moderate_urls.py  mozillians.py  views.py
moderator/moderate/migrations/: 0001_initial.py  0002_auto_20170118_1120.py  0002_auto__del_field_mozillianprofile_bio__del_field_mozillianprofile_full_.py  0003_auto_20170118_1536.py  0003_auto__add_field_event_archived.py  0003_auto__add_field_event_created_at.py  0004_auto_20170120_1128.py  0004_auto__add_unique_vote_user_question.py  0005_auto__add_field_event_archived.py  0005_event_is_nda.py  0006_auto__add_field_question_addressed.py  0006_auto__add_field_question_reply.py  0006_mozillianprofile_is_nda_member.py  (+19 more)
moderator/moderator/: models.py  views.py
moderator/settings/: __init__.py  base.py  local.py-dist
requirements/: dev.in  dev.txt  prod.in  prod.txt
scripts/: install_nodejs.sh
(+29 files in other folders)
